# X11utills

./: .gitignore  CMakeLists.txt  CheckAtomName.c  GetWindowAttributes.c  README.md  readme.md  window_manage.c  window_manage.h  xclipget.c  xowners.c
Print_subwindow/: Makefile  PrintSubWindows.c
